# rda-toolbox

./: .gitignore  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: branch.yml  ci.yml  release.yml
Projectfolder_TEMPLATE/data/input/: MIC_Input.xlsx
assets/: Precipitation_Heatmap.html
docs/: conf.py  index.md  index.rst  input.md  mic.md  precipitation.md  primary.md  reference.md  requirements.txt  setup_marimo.md  tutorial_mappingfiles.md  utility_functions.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/reference/: classes.md  parser.md  plot.md  process.md  utility.md
docs/source/: conf.py  examples.rst  glossary.rst  mic_example.rst  primary_example.rst  rda_toolbox.rst
input/: index.html
mic/: index.html
precipitation/: index.html
primary/: index.html
rda_toolbox/: __init__.py  experiment_classes.py  parser.py  plot.py  process.py  processing.py  utility.py
rda_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reference/classes/: index.html
reference/parser/: index.html
reference/plot/: index.html
reference/process/: index.html
reference/utility/: index.html
search/: search_index.json
setup_marimo/: index.html
tests/: test_experiment_classes.py  test_parser.py  test_process.py  test_utility.py  test_validator.py
tutorial_mappingfiles/: index.html
utility_functions/: index.html
(+11 files in other folders)
