[project.urls]
Repository = "https://github.com/Robotic-Discovery-of-Antiinfectives/rda-toolbox"
Documentation = "https://robotic-discovery-of-antiinfectives.github.io/rda-toolbox/"
[project]
name = "rda-toolbox"
version = "0.1.15"
description = "Add your description here"
authors = [
    {name = "Timo Leistner", email = "leistner.timo@googlemail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "black>=26.1.0",
    "mkdocstrings-python>=2.0.2",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "rdkit>=2025.9.5",
    "vl-convert-python>=1.9.0.post1",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["rda_toolbox"]
